--- a/Style.css
+++ b/Style.css
@@ -15673,7 +15673,7 @@ ul.is-bar li + li {
 .fa-li {
   text-align: center;
 }
-@font-face {
+/*@font-face {
   font-family: FontAwesome;
   src: url(../fonts/fontawesome-webfont.eot?v=4.7.0);
   src: url(../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0)
@@ -15685,7 +15685,7 @@ ul.is-bar li + li {
       format('svg');
   font-weight: 400;
   font-style: normal;
-}
+}*/
 .fa {
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
